--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a26d2dec",
+   "id": "79db1e54",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f500278f",
+   "id": "2b15e592",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0aa90b4",
+   "id": "73b8f803",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81c78f05",
+   "id": "3dcf5e99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b0087b74",
+   "id": "f9cdcef5",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ac1b821f",
+   "id": "78438165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7549deb5",
+   "id": "a6cb9a44",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb839c04",
+   "id": "e0ab96c2",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c2affa80",
+   "id": "42845148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "54628ea7",
+   "id": "909a12b3",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "eb20455c",
+   "id": "f06eca4f",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "16572d10",
+   "id": "534e80a5",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8b9b2c9e",
+   "id": "223a2260",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "46e151a7",
+   "id": "bdf78ed6",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eee0d441",
+   "id": "41d1babe",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ff75aa85",
+   "id": "97a39133",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "aa01b612",
+   "id": "9eb966df",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f44380d",
+   "id": "6aa46989",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5ec19f7b",
+   "id": "8e6e7e6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9d2d6498",
+   "id": "487b9424",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "06840830",
+   "id": "fab5fe98",
    "metadata": {},
    "outputs": [
     {
@@ -557,12 +557,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "290737fa",
+   "cell_type": "markdown",
+   "id": "fda6e323",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Restuarant\n",
+    "\n",
+    "0. Define `total` to be 0.\n",
+    "1. Define a dict called `menu` whose keys are the entree names and whose values are their prices.\n",
+    "2. Ask the user, repeatedly, to enter an order:\n",
+    "    - If the order is empty (empty string), then stop asking and exit the program\n",
+    "    - If the order is key in the dict, then add the price to `total`, and print the item, new total, and price.\n",
+    "    - If the order is *not* in the dict, then give the user a scolding\n",
+    "    \n",
+    "Example:\n",
+    "\n",
+    "    Order: sandwich\n",
+    "    sandwich is 12, total is 12\n",
+    "    Order: tea\n",
+    "    tea is 10, total is 22\n",
+    "    Order: elephant\n",
+    "    we are fresh out of elephant today!"
+   ]
   }
  ],
  "metadata": {
