--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2fd9cb21",
+   "id": "ae75179e",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49d7d94f",
+   "id": "b17f2ab5",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c19d59b",
+   "id": "a337329f",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d4fc4bc5",
+   "id": "4963dbc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2fc7aa03",
+   "id": "bc1ebae4",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b6259509",
+   "id": "82c3723b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d509a74",
+   "id": "e7237080",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dad7cce6",
+   "id": "5da34256",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3c654851",
+   "id": "64d480c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b046ee76",
+   "id": "cf32765c",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0f1506ab",
+   "id": "1dad4cfe",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "33c85791",
+   "id": "a9a4b34f",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0045d556",
+   "id": "8e79caf3",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6d5d0e6d",
+   "id": "d8bb7631",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "75a9b37e",
+   "id": "1fd47965",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "569bacae",
+   "id": "ab613625",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8cbcceb7",
+   "id": "13fcd6e7",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa54ffa4",
+   "id": "bf05183b",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9759d74b",
+   "id": "8d7b9d7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1ac6a5f8",
+   "id": "5dd4c674",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "79c686f8",
+   "id": "b3da8da9",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7927c47f",
+   "id": "e98def84",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4ea122c6",
+   "id": "c0b1ebb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c61ab3ef",
+   "id": "8abd819b",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8e584bf0",
+   "id": "0823d29d",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a6b3a523",
+   "id": "e4c65761",
    "metadata": {},
    "outputs": [
     {
@@ -660,10 +660,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b56461c4",
+   "id": "dec2b7b0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total = 0\n",
+    "\n",
+    "menu = {'sandwich':12, 'tea':10, 'apple':1, 'cake':5}   # 4 key-value pairs\n",
+    "\n",
+    "while True:   # infinite loop -- it'll last until we encounter \"break\"\n",
+    "\n",
+    "    order = input('Order: ').strip()\n",
+    "\n",
+    "    if order == '':   # this is how we can get out of the infinite loop!\n",
+    "        break\n",
+    "        \n",
+    "    # is this order on the menu?\n",
+    "    if order in menu:\n",
+    "        price = menu[order]\n",
+    "        total += price\n",
+    "        print(f'{order} costs {price}; total i')"
+   ]
   }
  ],
  "metadata": {
