--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae75179e",
+   "id": "ff509aec",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17f2ab5",
+   "id": "ca89b613",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a337329f",
+   "id": "bf903ea4",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4963dbc2",
+   "id": "7d439b51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bc1ebae4",
+   "id": "3029e934",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "82c3723b",
+   "id": "41691189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7237080",
+   "id": "81953d49",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5da34256",
+   "id": "63f48cbc",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "64d480c5",
+   "id": "d84d5d8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cf32765c",
+   "id": "18a65f6b",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1dad4cfe",
+   "id": "7737523b",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a9a4b34f",
+   "id": "f2cf0e61",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8e79caf3",
+   "id": "812c71f7",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d8bb7631",
+   "id": "8eba2504",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1fd47965",
+   "id": "7890342c",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ab613625",
+   "id": "403ec72e",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "13fcd6e7",
+   "id": "564fb730",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf05183b",
+   "id": "0b23511c",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8d7b9d7c",
+   "id": "a0b66e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5dd4c674",
+   "id": "277589b9",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b3da8da9",
+   "id": "7c3f38be",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e98def84",
+   "id": "adf9cf7f",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c0b1ebb2",
+   "id": "0038bb99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8abd819b",
+   "id": "68e72b30",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0823d29d",
+   "id": "e4c6bbe5",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e4c65761",
+   "id": "e46c1b1e",
    "metadata": {},
    "outputs": [
     {
@@ -659,10 +659,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dec2b7b0",
+   "execution_count": 25,
+   "id": "f7d3424e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order: sandwich\n",
+      "sandwich costs 12; total is now 12\n",
+      "Order: sandwich\n",
+      "sandwich costs 12; total is now 24\n",
+      "Order: tea\n",
+      "tea costs 10; total is now 34\n",
+      "Order: cake\n",
+      "cake costs 5; total is now 39\n",
+      "Order: apple\n",
+      "apple costs 1; total is now 40\n",
+      "Order: table\n",
+      "We are out of table today!\n",
+      "Order: \n",
+      "Price is 40\n"
+     ]
+    }
+   ],
    "source": [
     "total = 0\n",
     "\n",
@@ -679,8 +700,20 @@
     "    if order in menu:\n",
     "        price = menu[order]\n",
     "        total += price\n",
-    "        print(f'{order} costs {price}; total i')"
+    "        print(f'{order} costs {price}; total is now {total}')\n",
+    "    else:\n",
+    "        print(f'We are out of {order} today!')\n",
+    "        \n",
+    "print(f'Price is {total}')        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19a2c21b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
