--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4a2c37f3",
+   "id": "9d3cd1e8",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e9a033b",
+   "id": "be258582",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0ef706",
+   "id": "7d18094f",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cb47a914",
+   "id": "2686739c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cffa98d9",
+   "id": "38f492ca",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f02310d1",
+   "id": "c67d2777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4d6c647",
+   "id": "ac7c53b3",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c10fc694",
+   "id": "79b13219",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5ccc3f30",
+   "id": "3a71d922",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5d526092",
+   "id": "2717dece",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d3b3da23",
+   "id": "1209f13e",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8f282753",
+   "id": "dc62562f",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "933babfb",
+   "id": "b8af0c15",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "420cf727",
+   "id": "5a53f9bd",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "493e00db",
+   "id": "a4f64c47",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4ceb67dd",
+   "id": "7d886529",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a2bdfca2",
+   "id": "149598b7",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6489e886",
+   "id": "bca5d5f4",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "88a5a1a7",
+   "id": "e8d7e5cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "689aa468",
+   "id": "b2b77403",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8602c4a2",
+   "id": "99cda53f",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16071862",
+   "id": "43aa2443",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "609aea15",
+   "id": "3402d3f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "498b4b03",
+   "id": "a8cfc82c",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a3e057c3",
+   "id": "f1c87cc8",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5f1926cb",
+   "id": "80b279ef",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c007c9e4",
+   "id": "1775cc8f",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58502e08",
+   "id": "9e56c3bd",
    "metadata": {},
    "source": [
     "# Dicts are mutable\n",
@@ -720,17 +720,49 @@
     "\n",
     "```python\n",
     "s = 'abcd'      # assigning a string to s\n",
-    "s = s.upper()   # assigning a new st\n",
-    "```"
+    "s = s.upper()   # assigning a new string to s \n",
+    "```\n",
+    "\n",
+    "The above is *not* mutable data, though.  Strings are immutable.\n",
+    "\n",
+    "By contrast, lists are mutable. We change a list with `append` and the like, without assigning or re-assigning it to a variable.\n",
+    "\n",
+    "Dictionaries are also mutable. We can change them without re-assigning them to a variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "eeb6b414",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of x is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# f-strings are special\n",
+    "\n",
+    "x = 10\n",
+    "\n",
+    "print('The value of x is ' + str(x))   # here, we're combining two strings into a new one"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c73daf",
+   "id": "59b63aee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# I can also say:\n",
+    "\n",
+    "print(f'The value of x is {x}')  # here, we're depending on {} returning a string, no matter the typ e"
+   ]
   }
  ],
  "metadata": {
