--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9d3cd1e8",
+   "id": "7194c3ac",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be258582",
+   "id": "8a744cc0",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d18094f",
+   "id": "52edd613",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2686739c",
+   "id": "9bec13b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "38f492ca",
+   "id": "42d1a7b4",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c67d2777",
+   "id": "4d137ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac7c53b3",
+   "id": "3fac1ff0",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79b13219",
+   "id": "62295ee7",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3a71d922",
+   "id": "39f17538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2717dece",
+   "id": "5a1f4289",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1209f13e",
+   "id": "6ba8db07",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dc62562f",
+   "id": "039b73a3",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b8af0c15",
+   "id": "de47f795",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5a53f9bd",
+   "id": "9c64e3e4",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a4f64c47",
+   "id": "ecc811d5",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7d886529",
+   "id": "e580d064",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "149598b7",
+   "id": "3944c43e",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bca5d5f4",
+   "id": "47b164fb",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e8d7e5cc",
+   "id": "7236a413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b2b77403",
+   "id": "e42c29c5",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "99cda53f",
+   "id": "7e1ec8df",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43aa2443",
+   "id": "fb5b9048",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3402d3f1",
+   "id": "9c8f2386",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a8cfc82c",
+   "id": "95a92ece",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f1c87cc8",
+   "id": "5e197ed9",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "80b279ef",
+   "id": "ea3aa9e9",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1775cc8f",
+   "id": "73958770",
    "metadata": {},
    "outputs": [
     {
@@ -708,32 +708,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9e56c3bd",
-   "metadata": {},
-   "source": [
-    "# Dicts are mutable\n",
-    "\n",
-    "You might remember that Python data can be *mutable* or *immutable*. The question is whether we can change an existing data structure. This is *not* the same as whether we can assign a value to a variable!\n",
-    "\n",
-    "We can *always* assign a new value to a variable. For example:\n",
-    "\n",
-    "```python\n",
-    "s = 'abcd'      # assigning a string to s\n",
-    "s = s.upper()   # assigning a new string to s \n",
-    "```\n",
-    "\n",
-    "The above is *not* mutable data, though.  Strings are immutable.\n",
-    "\n",
-    "By contrast, lists are mutable. We change a list with `append` and the like, without assigning or re-assigning it to a variable.\n",
-    "\n",
-    "Dictionaries are also mutable. We can change them without re-assigning them to a variable."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "eeb6b414",
+   "id": "42186568",
    "metadata": {},
    "outputs": [
     {
@@ -754,15 +731,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59b63aee",
+   "execution_count": 27,
+   "id": "a8f9f423",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of x is 10\n"
+     ]
+    }
+   ],
    "source": [
     "# I can also say:\n",
     "\n",
-    "print(f'The value of x is {x}')  # here, we're depending on {} returning a string, no matter the typ e"
+    "print(f'The value of x is {x}')  # here, we're depending on {} returning a string, no matter the type of x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44685ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
